tests/baselines/reference/errorMessagesIntersectionTypes01.errors.txt
errorMessagesIntersectionTypes01.ts(14,5): error TS2322: Type '{ fooProp: string; } & Bar' is not assignable to type 'FooBar'.
  Types of property 'fooProp' are incompatible.
    Type 'string' is not assignable to type 'boolean'.


==== errorMessagesIntersectionTypes01.ts (1 errors) ====
    interface Foo {
        fooProp: boolean;
    }
    
    interface Bar {
        barProp: string;
    }
    
    interface FooBar extends Foo, Bar {
    }
    
    declare function mixBar<T>(obj: T): T & Bar;
    
    let fooBar: FooBar = mixBar({
        ~~~~~~
!!! error TS2322: Type '{ fooProp: string; } & Bar' is not assignable to type 'FooBar'.
!!! error TS2322:   Types of property 'fooProp' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'boolean'.
        fooProp: "frizzlebizzle"
    });